# microchat

./: .flake8  .gitignore  LICENSE  benchmark_nov11.csv  dvc.yaml  keybindings.json  pyproject.toml
analysis_scripts/: 20240708_generate_multichoice.py  20240815_taxonomy_summarization.py  20240830_datset_statistics_first.py  20240925_llm_tagging.py  20241008_analyze_tags.py  20241015_test_jeffs_questions.py  20241016_llm_tagging.py  20241018_extract_explanations.py  20241023_custom_assistant.py  20241024_test_yuhui_baseline.py  20241028_practice_test_structured_output.py  20241028_v1_mcq_refiner_bot.py  20241030_blooms_tagging.py  20241030_eval_after_v1_mcq_refiner_bot.py  20241030_eval_after_v1_mcq_refiner_bot_choose_best_qs.py  20241102_fixing_bad_images.py  20241103_analysis_plots.py  20241103_choose_subset.py  20241103_create_images_folders.py  20241112_llm_tagging_final.py  20241212_get_form_mcq_responses.py  20241230_get_human_eval.py  20241230_get_human_eval_refinebot.py  20250126_prepare_human_eval_forms.py  20250128_humaneval_refinebotvalidation.py  20250216_collect_mcq_repsonses_round2.py  20250219_get_unreviewed_questions.py  20250221_compile_dataset.py  20250225_fix_imgs_66.p  20250225_fix_imgs_66.py  20250225_fix_imgs_73_74_75.py  20250228_auto_error_analysis.py  20250309_make_final_dataset.py  Untitled-1.py  prompts_20241028_v1_mcq_refiner_bot.py
benchmark/build_raw_dataset/: README.md  apply_manual_annotations.py  download_data.py  gen_multichoice.py  gen_pdf_form_responses.py  gen_pdf_initial_responses.py  llm_based_annotations_1.py  make_dataframes.py  make_questions.py  make_questions_round1.py
benchmark/data/: 2_lookup_person_to_questions.json  qa_keyprompt_0_seed_0.json  qa_results_keyprompt_0_seed_0_keyprompteval_0.json  qa_results_keyprompt_1_seed_0_keyprompteval_0.json
benchmark/evals/: eval_on_attribute.py  eval_on_external_codebase.py  process_secondary_sweep.py  process_secondary_sweep_stage1.py  python -m ipdb process_secondary_sweep.py  untitled.py
benchmark/final_benchmark/: make_final_benchmark.py
benchmark/form_process/: download_data.py  gen_multichoice.py  gen_pdf_form_responses.py
benchmark/graduate_samples/: combine_dataset.py  create_google_form.gs  eval_on_external_codebase.py  gather_manual_review.py  prepare_formdata.py  prepare_reviews.py  run_eval.py
benchmark/make_mcq_benchmark/: README.md  eval.py  eval_as_pdf.py  generate_choices.py  make_questions.py
benchmark/metadata_tags/: domains.yaml  modalities.yaml  stains.yaml  synonyms.yaml
benchmark/refine_bot/: bot.py  idxs_sample.json  keys_redo_round1.json  keys_redo_round2.json  keys_redo_round3.json  keys_redo_round4.json  keys_round1.json  keys_round2.json  keys_round3.json  keys_round4.json  keys_round5.json  keys_round6.json  keys_round7.json  keys_round8.json  prompts.py  run_eval.py  run_experiments.py
benchmark/stage1_dspy_blooms_etc/: run_dspy.py
data/processed/: .gitignore  20250206_o1-mini_CoTRAG_SelfAssessRevisedInput_output.csv.dvc  20250206_questions.csv.dvc  VQA_3_bot_refined-nov5_dspy_full__eval_seed0.csv.dvc  VQA_3_bot_refined-nov5_dspy_full__eval_seed0_use-case-1_figure.csv.dvc  VQA_3_bot_refined-nov5_dspy_full__eval_seed0_use-case-2_figure.csv.dvc  VQA_3_bot_refined-nov5_dspy_full__eval_seed0_use-case-3_figure.csv.dvc  VQA_4_for_annotators.xlsx.dvc  ap_2020-2023_questions.csv.dvc  benchmark_nov11.csv.dvc  blooms_classification_finetuning.csv.dvc  blooms_classification_finetuning_v2.csv.dvc  blooms_classification_finetuning_v3.xlsx.dvc  cp_2020-2023_questions.csv.dvc  eval_anthropicclaude-35-sonnet_naive.xlsx.dvc  eval_gpt-4o-2024-08-06_naive.csv.dvc  jhu_questions.csv.dvc  jmhb_microvqa_train.csv.dvc  jmhb_microvqa_train_w-metadata.csv.dvc  jmhb_microvqa_train_w-metadata_difficulty.csv.dvc  jmhb_microvqa_train_w-metadata_difficulty.xlsx.dvc  jmhb_microvqa_train_w-metadata_difficulty_org-research.csv.dvc  jmhb_microvqa_train_w-metadata_difficulty_org-research_new-metadata-only.csv.dvc  llm-qc_eval_naive.csv.dvc  microbench.csv.dvc  microchat.csv.dvc  microchat_v2.csv.dvc  microchat_v2_full_1070.csv.dvc  mol_bio_cell.csv.dvc  nbme_blooms.csv.dvc  o1-mini_CoTRAG_SelfAssessRevisedInput_output_processed.csv.dvc  o1-mini_CoTRAG_SelfAssessRevisedInput_outputv2.csv.dvc  osu_questions.csv.dvc  other_blooms.csv.dvc  path_questions.csv.dvc
data/raw/: 20250206_images.csv.dvc  20250206_questions.csv.dvc
docs/: contribute.html  index.html
models/: openai_api.py
models/dspy_compiled/: .gitignore  blooms.dvc  nbme.dvc
paper_scripts/: latex_table_rw.py  table_rw_clean_table.csv
src/microchat/: __init__.py  compute_text_difficulty.py  (+6 more)
(+65 files in other folders)
