[tool.poetry]
name = "microchat"
version = "0.1.0"
description = "A vision-language benchmark for image-based reasoning in biomedical images."
authors = ["James Burgess, Jeffrey Nirschl, Laura Bravo"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.1"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"
loguru = "^0.7.0"
rich = "^13.7.0"
tqdm = "^4.66.2"
pillow = "^9.5.0"
openai = "^1.51.2"
matplotlib = "^3.8.4"

[tool.poetry.group.dvc]
optional = true
[tool.poetry.group.dvc.dependencies]
dvc = {extras = ["s3"], version = "^3.17.0"}

[tool.poetry.scripts]
microchat = "microchat.__main__:main"

[tool.black]
line-length = 88
target-version = ["py39"]
exclude = "/.github/"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
extend_skip = [".md", ".json"]
skip_glob = ["**/docs/**", "**/site-packages/**"]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
addopts = [
    "-rsxX --showlocals",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: determines whether the deployed build is stable or not (select with '-m \"smoke\"')",
    "debug: marks tests as actively under debugging (deselect with '-m \"not debug\"')",
]
norecursedirs = ".git/* .dvc/* build/* data/external/* data/interim/* data/processed/* data/raw/*"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
